--- a/vr-web-boss/src/main/resources/jeecg/jeecg_database.properties
+++ b/vr-web-boss/src/main/resources/jeecg/jeecg_database.properties
@@ -1,9 +1,9 @@
 #mysql
 diver_name=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/jeecg-boot?useUnicode=true&characterEncoding=UTF-8
+url=jdbc:mysql://111.231.50.21:3306/xzy_vr?useUnicode=true&characterEncoding=UTF-8
 username=root
-password=root
-database_name=jeecg-boot
+password=root123
+database_name=xzy_vr
 
 #oracle
 #diver_name=oracle.jdbc.driver.OracleDriver
